# brandonaut.github.io

./: 404.html  CNAME  README.md  _config.yml  about.markdown  about.md  index.html  mkdocs.yml  pyproject.toml
_posts/: 2020-06-28-welcome-to-jekyll.markdown
docs/: CNAME  index.md  palestine-links.md  palestine.md
docs/references/: palestine.md
palestine/: index.html
palestine-links/: index.html
references/palestine/: index.html
search/: search_index.json
